# duckdb-tutorial

./: README.md  notebook.py  pyproject.toml
