[tool.poetry]
name = "duckdb-tutorial"
version = "0.1.0"
description = ""
authors = ["Gabriel Santello <gvsantello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^0.10.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
